# Site_Prevencao

./: LICENSE  README.md  pyproject.toml  requirements.txt
site_prevencao/: __init__.py
tests/: test_site_prevencao.py
