[tool.poetry]
name = "site_prevencao"
version = "0.1.0"
description = "Acesso a informações do HA na Prevenção"
authors = ["sinval <sinvalbiot@yahoo.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
